tests/ui/errors/snapshots/infer_let_annotation_mismatch_keeps_annotation_help.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
   ╭─[test.lis:3:16]
 2 │ fn test() {
 3 │   let x: int = "four"
   ·                ───┬──
   ·                   ╰── expected `int`, found `string`
 4 │   let _ = x
   ╰────
  help: Change the type annotation to `string` or convert the value to `int` · code: [infer.type_mismatch]
